<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.moonshadow.xperia.tools.fragments.GerneralInfo">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="15.0sp"
        android:layout_marginLeft="15.0sp"
        android:layout_marginRight="15.0sp"
        android:layout_marginTop="15.0sp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5.0sp"
                android:layout_marginTop="5.0sp"
                android:focusableInTouchMode="false"
                android:src="@drawable/guide" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5.0sp"
                android:layout_marginTop="5.0sp"
                android:paddingTop="8.0sp"
                android:text="@string/touch"
                android:textSize="18.0sp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="fill_parent"
                android:layout_height="1.25sp"
                android:background="@drawable/divider" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5.0sp"
                android:text="@string/kernel"
                android:textSize="18.0sp" />

            <TextView
                android:id="@+id/textViewKernelInfo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5.0sp"
                android:gravity="right"
                android:textSize="16.0sp" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="fill_parent"
                android:layout_height="1.25sp"
                android:background="@drawable/divider" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5.0sp"
                android:text="@string/memory"
                android:textSize="18.0sp" />

            <TextView
                android:id="@+id/textView_memory"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5.0sp"
                android:gravity="right"
                android:textSize="16.0sp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="fill_parent"
                android:layout_height="1.25sp"
                android:background="@drawable/divider" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5.0sp"
                android:text="@string/cpu_freq"
                android:textSize="18.0sp" />

            <TextView
                android:id="@+id/textView_cpu_freq"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5.0sp"
                android:gravity="right"
                android:textSize="16.0sp" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="fill_parent"
                android:layout_height="1.25sp"
                android:background="@drawable/divider" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5.0sp"
                android:text="@string/gpu_freq"
                android:textSize="18.0sp" />

            <TextView
                android:id="@+id/textView_gpu_freq"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5.0sp"
                android:gravity="right"
                android:textSize="16.0sp" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="fill_parent"
                android:layout_height="1.25sp"
                android:background="@drawable/divider" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>
