<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.moonshadow.xperia.tools.fragments.KnockOnSettings">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="15.0sp"
        android:layout_marginLeft="15.0sp"
        android:layout_marginRight="15.0sp"
        android:layout_marginTop="15.0sp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="fill_parent"
                android:layout_height="200.0sp"
                android:layout_marginBottom="5.0sp"
                android:layout_marginTop="5.0sp"
                android:focusableInTouchMode="false"
                android:src="@drawable/event_picture_1"
                android:scaleType="fitCenter" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5.0sp"
                android:layout_marginTop="5.0sp"
                android:paddingTop="8.0sp"
                android:text="@string/touch"
                android:textSize="18.0sp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="fill_parent"
                android:layout_height="1.25sp"
                android:background="@drawable/divider" />

            <Switch
                android:id="@+id/switch_tap_to_wake"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10.0sp"
                android:layout_marginTop="10.0sp"
                android:text="@string/touch_switch"
                android:textSize="18.0sp" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="fill_parent"
                android:layout_height="1.25sp"
                android:background="@drawable/divider" />

            <Switch
                android:id="@+id/switch_set_on_boot"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10.0sp"
                android:layout_marginTop="10.0sp"
                android:text="@string/set_on_boot"
                android:textSize="18.0sp" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="fill_parent"
                android:layout_height="1.25sp"
                android:background="@drawable/divider" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>
